--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
 
         <!-- Contacts -->
-        <address>
+        <address class="address-title">
             <ul>
                 <li> <a href="mailto:info@devstudio.com" class="address-font">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111" class="address-font">+11 (000) 111-11-11</a></li>
@@ -139,7 +139,7 @@
                 </li>
                 <li class="our-portfolio-list-item">
                     <img src="./images/img-7.jpg" alt="Taxi Service" width="360" height="300" />
-                    <h3 class="header-three">Banking App</h3>
+                    <h3 class="header-three">Taxi Sevice</h3>
                     <p class="body-text">Marketing</p>
                 </li>
                 <li class="our-portfolio-list-item">
